RESOLVED FIXED 65115
glActiveTexture(0) is invalid
https://bugs.webkit.org/show_bug.cgi?id=65115
Summary glActiveTexture(0) is invalid
Andrew Wason
Reported 2011-07-25 08:52:31 PDT
platform/graphics/opengl/GraphicsContext3DOpenGL.cpp prepareTexture() calls glActiveTexture(0) which is invalid and results in GL error GL_INVALID_ENUM. Originally fixed in bug 64878, but extracted to here because it's orthogonal to that bug.
Attachments
fix call to glActiveTexture (1.54 KB, patch)
2011-07-25 09:05 PDT, Andrew Wason
no flags
Andrew Wason
Comment 1 2011-07-25 09:05:26 PDT
Created attachment 101877 [details] fix call to glActiveTexture
Kenneth Russell
Comment 2 2011-07-25 09:36:48 PDT
Comment on attachment 101877 [details] fix call to glActiveTexture Good catch. r=me Did you want this submitted via the commit queue? Mark cq? if so.
WebKit Review Bot
Comment 3 2011-07-25 10:39:32 PDT
Comment on attachment 101877 [details] fix call to glActiveTexture Clearing flags on attachment: 101877 Committed r91674: <http://trac.webkit.org/changeset/91674>
WebKit Review Bot
Comment 4 2011-07-25 10:39:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.