glActiveTexture(0) is invalid https://bugs.webkit.org/show_bug.cgi?id=65115

Patch by Andrew Wason <rectalogic@rectalogic.com> on 2011-07-25
Reviewed by Kenneth Russell.

Existing WebGL layout tests.

Fix invalid glActiveTexture(0) call.

* platform/graphics/opengl/GraphicsContext3DOpenGL.cpp:
(WebCore::GraphicsContext3D::prepareTexture):

Canonical link: https://commits.webkit.org/80852@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91674 268f45cc-cd09-0410-ab3c-d52691b4dbfc